--- a/walmart-FE/.gitignore
+++ b/walmart-FE/.gitignore
@@ -1,8 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/walmart-BE/node_modules
-/walmart-FE/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
